--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -578,6 +578,16 @@ Skillnaden i sysselsättningsgrad mellan utrikes och inrikes födda är således
 
 <span class = "kommentar">Kan ovanstående vara en effekt av dålig matchning för högre utbildning för utrikes födda?</span>
 
+Hur snabbt en nyligen invandrad person etableras på arbetsmarknaden är också nära kopplat till vilken utbildningsnivå personen har. För dem med högst utbildning har det visat sig att processen tenderar att gå relativt snabbt och cirka `r round(etablering_df %>% filter(kön == "kvinnor",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: eftergymnasial utbildning") %>% .$andel,0)` procent av kvinnorna och `r round(etablering_df %>% filter(kön == "män",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: eftergymnasial utbildning") %>% .$andel,0)` procent av männen arbetar innan de varit i Sverige i 2 år (0-1 år i figuren nedan). Sedan ökar etableringsgraden över tid och efter 10 år och längre är fler än 80 procent av kvinnorna mellan 20 och 65 år sysselsatta, vilket är i linje med sysselsättningsgraden för inrikes födda kvinnor i samma åldersgrupp. För dem med exempelvis gymnasial utbildning är situationen delvis annorlunda. I den gruppen arbetar ungefär `r round(etablering_df %>% filter(kön == "kvinnor",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: gymnasial utbildning") %>% .$andel,0)` procent av de utrikesfödda kvinnor, och cirka `r round(etablering_df %>% filter(kön == "män",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: gymnasial utbildning") %>% .$andel,0)` procent av de utrikesfödda männen, inom 2 år efter att de kommit till Sverige. Över tid ökar andelen etablerade snabbt på arbetsmarknaden, särskilt för gymnasialt utbildade.
+
+<br>
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+gg_etablering$etablering_lan_utb
+
+```
+<br>
+
 Matchningen mellan de som är arbetssökande och de arbeten som är lediga skulle kunna fungera betydligt bättre än idag.
 Konsekvensen av detta kan bli att företag och organisationer kan flytta från länet på grund av att de inte hittar
 arbetskraft och arbetskraftsreserven bestående av utrikes födda riskerar att lämna länet om de inte får jobb.
@@ -625,20 +635,6 @@ Skillnaden mellan utrikes födda kvinnor och utrikes födda män kan även förk
 
 Att vara anhöriginvandrare sätter också kvinnan i fråga i en särskild beroendeställning till sin respektive anhörige i jämförelse med om hon invandrat/flytt på egna premisser. Detta i kombination med ofta låg utbildning och brist på arbetslivserfarenhet från hemlandet blir också hinder för att delta i integrationsinsatser, utbildning och arbetssökande. Se exempelvis [Expertgruppen för studier i offentlig ekonomi (2021)](https://eso.expertgrupp.se/wp-content/uploads/2020/03/ESO-2021_7_forsorjning-med-fordrojning_webb.pdf){target="_blank"}^[Expertgruppen för studier i offentlig ekonomi (2021)] och [Regeringen (2023)](<https://www.regeringen.se/contentassets/aaae962745b74fa4abc01f7926bb5adc/sou-2023_24_pdf-a_webb.pdf>){target="_blank"}^[Etablering för fler – jämställda möjligheter till integration (SOU 2023:24)].
 
-Regeringen har under år 2023 satt fokus på insatser som ska få utrikes födda kvinnor i arbete snabbare. Bland annat har länsstyrelserna ett regionalt uppdrag med detta mål.
-
-*Nedanstående behöver lyftas upp i texten till delen ovanför som berör utbildningsnivåer*
-
-Hur snabbt en nyligen invandrad person etableras på arbetsmarknaden är också nära kopplat till vilken utbildningsnivå personen har. För dem med högst utbildning har det visat sig att processen tenderar att gå relativt snabbt och cirka `r round(etablering_df %>% filter(kön == "kvinnor",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: eftergymnasial utbildning") %>% .$andel,0)` procent av kvinnorna och `r round(etablering_df %>% filter(kön == "män",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: eftergymnasial utbildning") %>% .$andel,0)` procent av männen arbetar innan de varit i Sverige i 2 år (0-1 år i figuren nedan). Sedan ökar etableringsgraden över tid och efter 10 år och längre är fler än 80 procent av kvinnorna mellan 20 och 65 år sysselsatta, vilket är i linje med sysselsättningsgraden för inrikes födda kvinnor i samma åldersgrupp. För dem med exempelvis gymnasial utbildning är situationen delvis annorlunda. I den gruppen arbetar ungefär `r round(etablering_df %>% filter(kön == "kvinnor",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: gymnasial utbildning") %>% .$andel,0)` procent av de utrikesfödda kvinnor, och cirka `r round(etablering_df %>% filter(kön == "män",bakgrundsvariabel == "0-1 år",år == max(år),utbildningsnivå == "utbildningsnivå: gymnasial utbildning") %>% .$andel,0)` procent av de utrikesfödda männen, inom 2 år efter att de kommit till Sverige. Över tid ökar andelen etablerade snabbt på arbetsmarknaden, särskilt för gymnasialt utbildade.
-
-<br>
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
-
-gg_etablering$etablering_lan_utb
-
-```
-<br>
-
 Hur snabbt en nyligen invandrad person etablerar sig på arbetsmarknaden har förändrats avsevärt över tid, vilket åskådliggörs i diagrammet nedan. Från början av 2000-talet fram till mitten av 2010-talet låg etableringstiden relativt stabil, där ungefär 20 procent av de 20-64 åringar som varit i Sverige i upp till 2 år (0-1 år i figuren nedan) förvärvsarbetade och ungefär 50-60 procent av de 20-64 åringar som varit i Sverige mellan 4 och 10 år (4-9 år i figuren nedan) förvärvsarbetade. Efter den stora flyktinginvandringen i mitten av 2010-talet verkar dock någonting ha hänt och framförallt personer med kort vistelsetid (upp till 2 år) kommer i arbete betydligt snabbare. Mellan 2015 och `r max(etablering_df$år)` ökade andelen förvärvsarbetande av de 20-64 åringar som varit i Sverige i upp till 2 år (0-1 år i figuren nedan) från ungefär 14 procent till cirka `r round(etablering_df %>% filter(bakgrundsvariabel == "0-1 år",utbildningsnivå == "samtliga utbildningsnivåer",kön == "män och kvinnor",år == max(år)) %>% .$andel,0)`  procent, en remarkabel förbättring. Under samma tidsperiod har även arbetslösheten för gruppen utrikes födda minskat betydligt, vilket illustrerats i ett tidigare diagram. Värt att notera är att det i diagrammet nedan är andelen förvärvsarbetande i åldersgruppen 20-64 år som redovisas mellan 1997 och 2021, medan det är andelen förvärvsarbetande i åldergruppen 20-65 år som redovisas åren därefter. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
@@ -685,33 +681,38 @@ gg_etablering$etablering_tid
 
 ```
 
+Regeringen har under år 2023 satt fokus på insatser som ska få utrikes födda kvinnor i arbete snabbare. Bland annat har länsstyrelserna ett regionalt uppdrag med detta mål.
 
 # Boende och flyttmönster
-Med nästan alla sätt att mäta boende skiljer sig grupperna svensk och utländsk bakgrund åt. Det finns flera sätt att mäta boende på, typ av boende (villa eller lägenhet), boendeyta och bostadsägande säger alla någonting om hur människor bor, något som givetvis speglar den ekonomiska situation man lever i. Det innebär, precis som på de flesta andra områden, att gruppen utrikes födda kommer att ha en stor spridning avseende etablering i samhället. Några i gruppen kommer att ha bott i Sverige i mindre än ett år och andra i flera decennier. Således finns även inom boende anledning att göra analyser uppdelat på vistelsetid i Sverige. att människor som bott längre i Sverige i högre utsträckning äger sitt eget boende, antingen genom äganderätt (småhus) eller bostadsrätt (småhus eller lägenhet).
+
+## Boende
+Det finns flera sätt att mäta boende på och alla sätt indikerar boendeskillnader mellan inrikes och utrikes födda. Typ av boende (villa eller lägenhet), boendeyta och bostadsägande säger alla någonting om hur människor bor, något som givetvis speglar den ekonomiska situation man lever i. Det innebär, precis som på de flesta andra områden, att gruppen utrikes födda kommer att ha en stor spridning avseende etablering i samhället. Några i gruppen kommer att ha bott i Sverige i mindre än ett år och andra i flera decennier. Således finns även inom boende anledning att göra analyser uppdelat på vistelsetid i Sverige. Människor som bott längre i Sverige äger i högre utsträckning sitt eget boende, antingen genom äganderätt (småhus) eller bostadsrätt (småhus eller lägenhet).
+
+Att en större andel utrikes födda personer bor i hyresrätt, kan förklaras med att nyanlända personer generellt ännu inte hunnit etablera sig i Sverige så pass att de har ekonomiska möjligheter att äga sitt eget boende. De utrikes födda bland Dalarnas invånare som bott i Sverige länge (mer än 10 år) tenderar dock att äga sin bostad, antingen som äganderätt eller bostadsrätt, i relativt stor utsträckning, ungefär `r boendetyp_10_ar_äga` procent av de utrikes födda gör det. Det går dock att konstatera att andelen som äger sin bostad är väsentligt högre bland de som är födda i Sverige, ca `r boendetyp_inrikes_äga` procent av de inrikes födda gör det. 
 
 ```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
 gg_boendetyp_upplatelseform$boendetyp_vistelsetid_inrikes
 ```
 
-Att en större andel utrikes födda personer bor i hyresrätt, kan förklaras med att nyanlända personer generellt ännu inte hunnit etablera sig i Sverige så pass att de har ekonomiska möjligheter att äga sitt eget boende. De utrikes födda bland Dalarnas invånare som bott i Sverige länge (mer än 10 år) tenderar dock att äga sin bostad, antingen som äganderätt eller bostadsrätt, i relativt stor utsträckning, ungefär `r boendetyp_10_ar_äga` procent av de utrikes födda gör det. Det går dock att konstatera att andelen som äger sin bostad är väsentligt högre bland de som är födda i Sverige, ca `r boendetyp_inrikes_äga` procent av de inrikes födda gör det. 
+Ytterligare en relevant analys rörande boende är andelen trångbodda hushåll. Trångboddhet i lägenheter i flerbostadshus mäts idag oftast enligt Norm 3 ([Boverket](https://www.boverket.se/sv/kommunernas-bostadsforsorjning/underlag-for-bostadsforsorjningen/sarskilda-grupper/trangbodda/){target="_blank"}), vilket innebär att fler boende än en person per rum är trångbott, kök och ett rum (vardagsrum) oräknat. Sammanboende förutsätts behöva ett rum färre än ensamstående samt att ensamstående personer boende i ett rum inte bedöms vara trångbodda. Detta innebär att en ensamstående vuxen med två barn behöver en lägenhet med minst fyra rum för att inte vara trångbodda. Två sammanboende vuxna med ett barn däremot behöver endast tre rum för att inte vara trångbodda eftersom de vuxna antas kunna dela ett sovrum.
 
-Ytterligare en relevant analys rörande boende är andelen trångbodda hushåll. Trångboddhet i lägenheter i flerbostadshus mäts idag oftast enligt Norm 3 vilket innebär att fler boende än en person per rum är trångbott, kök och ett rum (vardagsrum) oräknat. Sammanboende förutsätts behöva ett rum färre än ensamstående samt att ensamstående personer boende i ett rum inte bedöms vara trångbodda . Detta innebär att en ensamstående vuxen med två barn behöver en lägenhet med minst fyra rum för att inte vara trångbodda. Två sammanboende vuxna med ett barn däremot behöver endast tre rum för att inte vara trångbodda eftersom de vuxna antas kunna dela ett sovrum.
+Trångboddhet i småhus kan inte mätas på samma sätt eftersom att uppgifter på antal rum inte samlas in. Det går att mäta med hjälp av bostadsyta per hushållsmedlem även om det måttet blir trubbigare än det för flerbostadshus. Trångboddhet i småhushushåll anses dock inte vara ett utbrett problem, varför endast trångboddhet i flerbostadshus behandlas här.
 
-Trångboddhet i småhus kan inte mätas på samma sätt eftersom att uppgifter på antal rum inte samlas in. Det går att mäta med hjälp av bostadsyta per hushållsmedlem även om det måttet blir trubbigare än det för flerbostadshus. Trångboddhet i småhushushåll anses dock inte vara ett utbrett problem och beräkningar gjorda av Region Dalarna stödjer det antagandet. Därför kommer endast trångboddhet i flerbostadshus att diskuteras här.
+De hushåll i Dalarna som är trångbodda utgör en liten andel av det totala antalet lägenhetshushåll, vilket framförallt beror på att få hushåll med inrikes födda är trångbodda (bara ungefär `r trangboddhet_sista_ar_inrikes_andel` procent år `r  trangboddhet_max_ar`). Bland hushåll med utrikes födda är en klart större andel trångbodda (ungefär `r trangboddhet_sista_ar_utrikes_andel` procent år `r trangboddhet_max_ar`). Sedan `r trangboddhet_min_ar` har antalet hushåll som är trångbodda minskat något för såväl inrikes som utrikes födda.
 
 ```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
 gg_trangboddhet$trangboddhet_antal_Dalarna
 ```
-
-De hushåll som är trångbodda i Dalarna utgör en liten andel av det totala antalet lägenhetshushåll, vilket framförallt beror på att få hushåll med inrikes födda är trångbodda (bara ungefär `r trangboddhet_sista_ar_inrikes_andel` procent år `r  trangboddhet_max_ar`). Bland hushåll med utrikes födda är en klart större andel trångbodda (ungefär `r trangboddhet_sista_ar_utrikes_andel` procent år `r trangboddhet_max_ar`). Sedan `r trangboddhet_min_ar` har antalet hushåll som är trångbodda minskat något för såväl inrikes som utrikes födda.
+<br>
+<span class = "kommentar">Förlänga tidsserien?</span>
 
 <span class = "kommentar">Vad mer behövs kring boende? Nedanstående är inte justerat ännu.</span>
 
-*Diagram 32 - trångboddhet efter vistelsetid*
+<span class = "kommentar">*Beräkna 2019 års Diagram 32 - trångboddhet efter vistelsetid*</span>
 
 I en kartläggning av trångbodhet utifrån vistelsetid i Sverige så kan det konstateras att många utrikes födda är trångbodda en lång tid efter att de har invandrat. Vidare analyser (inte visade här) visar att det är först i gruppen utlandsfödda som kom till Sverige för ca 35 år sedan som nivåerna på trångboddheten har sjunkit till nivåer jämförbara med de med utländsk bakgrund som är födda i Sverige eller de med svensk bakgrund. Det är viktigt att beakta att denna data visar olika grupper som har varit i Sverige flyttat hit under olika tidsperioder. Det betyder att den demografiska sammansättningen mellan grupperna inte är densamma samt att de kan ha olika preferenser för hur stort de vill bo. Diagram 32 stödjer dock slutsatsen att det finns stora skillnader på bostadsmarknaden mellan de som är inrikes och utrikes födda, samt visar att skillnaderna kan bestå under en väldigt lång tid efter att en person har invandrat till Sverige. 
 
-När det gäller trångboddhet är det viktigt att känna till att det vanligtvis är ett lokalt fenomen. Det är fullt möjligt att många kan vara trångbodda i ett bostadsområde samtidigt som få hushåll är trångbodda i grannområdet. Därför ger det en trubbig bild att kolla på trångboddhet på regionnivå.
+När det gäller trångboddhet är det viktigt att känna till att det vanligtvis är ett lokalt fenomen. Det är fullt möjligt att många kan vara trångbodda i ett bostadsområde samtidigt som få hushåll är trångbodda i grannområdet.
 
 *Diagram 33 - trångbodda per kommun och vistelsetid*
 
@@ -729,7 +730,7 @@ Skillnaden i boendeyta per person för personer med svensk och utländsk bakgrun
 
 Skillnaden mellan de med svensk och utländsk bakgrund är betydligt större för de som bor i flerbostadshus i samtliga åldersgrupper fram till 75+ år. Anledningen till detta kan bero på flera faktorer, som exempelvis att personer med svensk bakgrund har större möjlighet att påverka storleken på sin bostad, antingen genom att köpa en större bostad, en längre kötid, eller möjlighet att byta hyreskontrakt eller liknande. En annan förklaring är att personer med utländsk bakgrund i genomsnitt är en person mer i hushållet än personer med svensk bakgrund. Förutsatt samma boendeyta, får då personer med utländsk bakgrund automatiskt mindre boendeyta per person än de med svensk bakgrund. Det kan också finns skillnader i preferenser för hur stort man vill bo mellan de här två grupperna.
 
-
+## Flyttmönster
 Bland inrikes födda var det 94 263 personer mellan år 2002–2018 som flyttade till Dalarnas län från övriga Sverige och 99 304 som flyttade från länet till övriga Sverige, vilket gav ett flyttnetto på -5 041 personer, eller i genomsnitt -504 per år. I gruppen utrikes födda flyttade 19 819 personer till Dalarnas län från övriga Sverige och 23 912 personer flyttade till övriga Sverige från länet, vilket gav ett flyttnetto på -4 093 personer, eller i genomsnitt -410 per år. Det kan konstateras att flyttströmmarna har varit stora både till och från länet, både för utrikes och inrikes födda. Båda grupperna flyttar dock i större utsträckning från Dalarna till övriga Sverige än till Dalarna från övriga Sverige. Utrikes födda personer har generellt sätt varit mer benägna att flytta från länet än inrikes födda varit.
 
 Innan utrikes föddas flyttningar analyseras djupare kommer här först analys om inrikes flyttning till/från Dalarna generellt, och hur den skiljer sig i två olika åldersgrupper. Förmodligen är inrikes omflyttningar den faktor som på längre sikt mer än någon annan påverkar den regionala befolkningsstrukturen. Majoriteten av de som flyttar är unga mellan 20–35 år. I regioner med inflyttningsöverskott ökar därför antalet unga medan situationen är den motsatta i regioner med utflyttningsöverskott. Regioner som har en växande befolkning genom ett positivt flyttnetto, får en yngre befolkning och därmed även ett ökat barnafödande, med regionala födelseöverskott som följd.   Som konstaterat har flyttnettot inrikes till/från Dalarna varit negativt under de senaste tio åren. Främst gäller detta yngre vuxna som är mellan 19–28 år.
